# DESD

DESD/: main.cpp
DESD.xcodeproj/: project.pbxproj
DESD/Debug/: 99.json
DESD/src/: CMakeLists.txt  __main.cpp  copiamainultimo.cpp  main.cpp  main2.cpp  main3.cpp  stdIncludes.h  whereami.c  whereami.h
DESD/src/Data/: BehavioralSpace.cpp  BehavioralSpace.h  BehavioralState.cpp  BehavioralState.h  BehavioralTransition.cpp  BehavioralTransition.h  Component.cpp  Component.h  Dictionary.cpp  Dictionary.h  DictionaryState.cpp  DictionaryState.h  Event.cpp  Event.h  Link.cpp  Link.h  NFASpaceInterface.h  NFAStateInterface.h  NFATransitionInterface.h  Network.cpp  Network.h  Observation.cpp  Observation.h  SimpleNetwork.cpp  SimpleNetwork.h  SimpleState.cpp  SimpleState.h  SimpleTransition.cpp  SimpleTransition.h  State.cpp  State.h  Transition.cpp  Transition.h
DESD/src/Utils/: AbduceIO.h  BehavioralSpaceIO.h  Computation.h  DictionaryIO.h  DictionaryIO2.h  File.h  Generate.h  Logger.cpp  Logger.h  Menu.c  Menu.h  NetworkIO.h  ObservationIO.h  SimpleNetworkIO.h  _DS_Store  webpack.config.js
DESD/src/Utils/webViewer/: _DS_Store  _babelrc  package.json
DESD/src/Utils/webViewer/src/: index.html  index.js
DESD/src/Utils/webViewer/src/utils/: cyToPng.js
DESD/src/Utils/webViewer/src/visualizers/: bs.js  dic.js  network.js  simpleNetwork.js
DESD/src/manipulators/: BSBuilder.cpp  BSBuilder.h  BSBuilderDFA.cpp  BSBuilderDFA.h  DFAConstructor 2.cpp  DFAConstructor 2.h  DFAConstructor.cpp  DFAConstructor.h  DFA_Abd.cpp  DictionaryMerge 2.cpp  DictionaryMerge.cpp  DictionaryMerge.h  LabeledBSBuilder.cpp  LabeledBSBuilder.h  TopologicalGenerator.cpp  TopologicalGenerator.h
XCBuildData/: 01f5d362d69d92e53917ab47e2652ecd-desc.xcbuild  01f5d362d69d92e53917ab47e2652ecd-manifest.xcbuild  1f08d43732274a464a8995ab4293b487-desc.xcbuild  (+11 more)
(+112 files in other folders)
